@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,12 +22,10 @@
  */
 package javax.xml.transform.ptests;
 
-import static javax.xml.transform.ptests.TransformerTestConst.XML_DIR;
-import static org.testng.Assert.assertEquals;
-import static org.testng.Assert.assertNull;
-
-import java.io.File;
-import java.io.FileInputStream;
+import org.junit.jupiter.api.Test;
+import org.w3c.dom.Document;
+import org.w3c.dom.Node;
+import org.xml.sax.InputSource;
 
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
@@ -37,12 +35,12 @@ import javax.xml.transform.TransformerFactory;
 import javax.xml.transform.dom.DOMSource;
 import javax.xml.transform.sax.SAXSource;
 import javax.xml.transform.stream.StreamSource;
+import java.io.File;
+import java.io.FileInputStream;
 
-import org.testng.annotations.Listeners;
-import org.testng.annotations.Test;
-import org.w3c.dom.Document;
-import org.w3c.dom.Node;
-import org.xml.sax.InputSource;
+import static javax.xml.transform.ptests.TransformerTestConst.XML_DIR;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 
 /**
  * Class containing the test cases for SAXParserFactory API
@@ -50,10 +48,8 @@ import org.xml.sax.InputSource;
 /*
  * @test
  * @library /javax/xml/jaxp/libs
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow javax.xml.transform.ptests.TfClearParamTest
- * @run testng/othervm javax.xml.transform.ptests.TfClearParamTest
+ * @run junit/othervm javax.xml.transform.ptests.TfClearParamTest
  */
-@Listeners({jaxp.library.FilePolicy.class})
 public class TfClearParamTest {
     /**
      * Test style-sheet file name.
@@ -85,11 +81,11 @@ public class TfClearParamTest {
     public void clear01() throws TransformerConfigurationException {
         Transformer transformer = TransformerFactory.newInstance().newTransformer();
         transformer.setParameter(LONG_PARAM_NAME, PARAM_VALUE);
-        assertEquals(transformer.getParameter(LONG_PARAM_NAME).toString(), PARAM_VALUE);
+        assertEquals(PARAM_VALUE, transformer.getParameter(LONG_PARAM_NAME).toString());
     }
 
     /**
-     * Obtains transformer's parameter with the a name that wasn't set before.
+     * Obtains transformer's parameter with a name that wasn't set before.
      * Null is expected.
      * @throws TransformerConfigurationException If for some reason the
      *         TransformerHandler can not be created.
@@ -127,14 +123,14 @@ public class TfClearParamTest {
     public void clear04() throws TransformerConfigurationException {
         Transformer transformer = TransformerFactory.newInstance().newTransformer();
 
-        int intObject = 5;
-        transformer.setParameter(SHORT_PARAM_NAME, intObject);
-        assertEquals(transformer.getParameter(SHORT_PARAM_NAME), intObject);
+        int expectedIntValue = 5;
+        transformer.setParameter(SHORT_PARAM_NAME, expectedIntValue);
+        assertEquals(expectedIntValue, transformer.getParameter(SHORT_PARAM_NAME));
     }
 
     /**
      * Obtains transformer's parameter whose initiated with a stream source with
-     * the a name that set before. Value should be same as set one.
+     * the name that set before. Value should be same as set one.
      * @throws TransformerConfigurationException If for some reason the
      *         TransformerHandler can not be created.
      */
@@ -144,12 +140,12 @@ public class TfClearParamTest {
                 newTransformer(new StreamSource(new File(XSL_FILE)));
 
         transformer.setParameter(LONG_PARAM_NAME, PARAM_VALUE);
-        assertEquals(transformer.getParameter(LONG_PARAM_NAME), PARAM_VALUE);
+        assertEquals(PARAM_VALUE, transformer.getParameter(LONG_PARAM_NAME));
     }
 
     /**
      * Obtains transformer's parameter whose initiated with a stream source with
-     * the a name that wasn't set before. Null is expected.
+     * a name that wasn't set before. Null is expected.
      * @throws TransformerConfigurationException If for some reason the
      *         TransformerHandler can not be created.
      */
@@ -164,7 +160,7 @@ public class TfClearParamTest {
 
     /**
      * Obtains transformer's parameter whose initiated with a sax source with
-     * the a name that set before. Value should be same as set one.
+     * the name that set before. Value should be same as set one.
      * @throws Exception If any errors occur.
      */
     @Test
@@ -175,13 +171,13 @@ public class TfClearParamTest {
 
             Transformer transformer = TransformerFactory.newInstance().newTransformer(saxSource);
             transformer.setParameter(LONG_PARAM_NAME, PARAM_VALUE);
-            assertEquals(transformer.getParameter(LONG_PARAM_NAME), PARAM_VALUE);
+            assertEquals(PARAM_VALUE, transformer.getParameter(LONG_PARAM_NAME));
         }
     }
 
     /**
      * Obtains transformer's parameter whose initiated with a sax source with
-     * the a name that wasn't set before. Null is expected.
+     * a name that wasn't set before. Null is expected.
      * @throws Exception If any errors occur.
      */
     @Test
@@ -199,7 +195,7 @@ public class TfClearParamTest {
 
     /**
      * Obtains transformer's parameter whose initiated with a dom source with
-     * the a name that set before. Value should be same as set one.
+     * the name that set before. Value should be same as set one.
      * @throws Exception If any errors occur.
      */
     @Test
@@ -215,12 +211,12 @@ public class TfClearParamTest {
         Transformer transformer = tfactory.newTransformer(domSource);
 
         transformer.setParameter(LONG_PARAM_NAME, PARAM_VALUE);
-        assertEquals(transformer.getParameter(LONG_PARAM_NAME), PARAM_VALUE);
+        assertEquals(PARAM_VALUE, transformer.getParameter(LONG_PARAM_NAME));
     }
 
     /**
      * Obtains transformer's parameter whose initiated with a dom source with
-     * the a name that wasn't set before. Null is expected.
+     * a name that wasn't set before. Null is expected.
      * @throws Exception If any errors occur.
      */
     @Test
